--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.9",
     "@types/react-helmet": "^6.1.5",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.5",
