--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.9",
     "@types/react-helmet": "^6.1.5",
+    "date-fns": "^2.29.3",
+    "fs-extra": "^10.1.0",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -21,6 +24,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "tinymce": "^6.3.0",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -28,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "node ./postinstall.js"
   },
   "eslintConfig": {
     "extends": [
