--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "todo",
   "version": "0.2.0",
-  "private": true,
+  "private": "false",
+  "homepage": "https://qbr-dude.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,7 @@
     "@types/react-helmet": "^6.1.5",
     "date-fns": "^2.29.3",
     "fs-extra": "^10.1.0",
+    "gh-pages": "^4.0.0",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -33,7 +35,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "node ./postinstall.js"
+    "postinstall": "node ./postinstall.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
